--- a/blog/first-blog-post.mdx
+++ b/blog/first-blog-post.mdx
@@ -1,6 +1,6 @@
 ---
 slug: first-blog-post
-title: First Blog Post
+title: First Blog Post g
 authors:
   - name: Gao Wei
     title: Docusaurus Core Team
@@ -21,4 +21,3 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum 
 
   Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum.
 </Admonition>
-
