setting up tinasaurus

--- a/docs/test-page.mdx
+++ b/docs/test-page.mdx
@@ -1,5 +1,5 @@
 ---
-title: Test Page
+title: Test Page Kristof
 description: >-
   Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec
   ullamcorper nulla non metus auctor fringilla. Praesent commodo cursus magna,
